--- a/contracts/src/phone_numbers/Cargo.toml
+++ b/contracts/src/phone_numbers/Cargo.toml
@@ -6,14 +6,25 @@ edition = "2021"
 
 [dependencies]
 ink = { version = "4.3.0", default-features = false }
+openbrush = { version = "4.0.0-beta", default-features = false, features = [ "psp34" ] }
 
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
 scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
+
+[dev-dependencies]
+ink_e2e = "4.3.0"
+test_helpers = { path = "../test_helpers", default-features = false }
 
 [lib]
 path = "lib.rs"
 
 [features]
-default = ["std"]
-std = ["ink/std", "scale/std", "scale-info/std"]
+default = ["std", "e2e-tests"]
+std = [
+    "ink/std", 
+    "scale/std", 
+    "scale-info/std",
+    "openbrush/std"
+    ]
 ink-as-dependency = []
+e2e-tests = []
