Fix contracts build

--- a/contracts/src/phone_numbers/Cargo.toml
+++ b/contracts/src/phone_numbers/Cargo.toml
@@ -5,8 +5,8 @@ authors = ["Scio Labs <hello@scio.xyz>"]
 edition = "2021"
 
 [dependencies]
-ink = { version = "4.3.0", default-features = false }
-openbrush = { version = "4.0.0-beta", default-features = false, features = [ "psp34" ] }
+ink = { version = "4.2.1", default-features = false }
+openbrush = { version = "4.0.0-beta", default-features = false, features = ["psp34"] }
 
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
 scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
@@ -20,11 +20,6 @@ path = "lib.rs"
 
 [features]
 default = ["std", "e2e-tests"]
-std = [
-    "ink/std", 
-    "scale/std", 
-    "scale-info/std",
-    "openbrush/std"
-    ]
+std = ["ink/std", "scale/std", "scale-info/std", "openbrush/std"]
 ink-as-dependency = []
 e2e-tests = []
