--- a/contracts/src/transfer_escrow/Cargo.toml
+++ b/contracts/src/transfer_escrow/Cargo.toml
@@ -5,13 +5,14 @@ authors = ["[your_name] <[your_email]>"]
 edition = "2021"
 
 [dependencies]
-ink = { version = "4.2.0", default-features = false }
-
+ink = { version = "4.2.1", default-features = false }
+openbrush = { version = "4.0.0-beta", features = ["psp34"] }
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
 scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
+phone-numbers = { path = "../phone_numbers", default-features = false, features = ["ink-as-dependency"] }
 
 [dev-dependencies]
-ink_e2e = "4.2.0"
+ink_e2e = "4.2.1"
 
 [lib]
 path = "lib.rs"
@@ -22,6 +23,7 @@ std = [
     "ink/std",
     "scale/std",
     "scale-info/std",
+    "openbrush/std",
 ]
 ink-as-dependency = []
 e2e-tests = []
