--- a/contracts/src/transfer_escrow/Cargo.toml
+++ b/contracts/src/transfer_escrow/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 
 [dependencies]
 ink = { version = "4.2.1", default-features = false }
-openbrush = { version = "4.0.0-beta", features = ["psp34"] }
+openbrush = { version = "4.0.0-beta", default-features = false, features = ["psp34"] }
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
 scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
 phone-numbers = { path = "../phone_numbers", default-features = false, features = ["ink-as-dependency"] }
