Fix build of transfer_escrow

--- a/contracts/src/transfer_escrow/Cargo.toml
+++ b/contracts/src/transfer_escrow/Cargo.toml
@@ -24,6 +24,7 @@ std = [
     "scale/std",
     "scale-info/std",
     "openbrush/std",
+    "phone-numbers/std"
 ]
 ink-as-dependency = []
 e2e-tests = []
