--- a/contracts/src/phone_numbers/Cargo.toml
+++ b/contracts/src/phone_numbers/Cargo.toml
@@ -6,13 +6,11 @@ edition = "2021"
 
 [dependencies]
 ink = { version = "4.2.1", default-features = false }
-openbrush = { version = "4.0.0-beta", default-features = false, features = [
-    "psp34",
-    "access_control",
-] }
+openbrush = { version = "4.0.0-beta", default-features = false, features = ["psp34", "access_control"] }
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
 scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
 ink_primitives = { version = "~3.4.0", default-features = false }
+hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
 
 
 [dev-dependencies]
